# Gravity-Simulator

./: CMakeLists.txt  README.md
include/: Camera.hpp  Shader.hpp  fileManager.hpp  pch.h
include/shaders/: skybox.vs  space.frag  space.vert
src/: Shader.cpp  fileManager.cpp  main.cpp
